[package]
name = "madparts"
version = "0.1.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/andete/madparts/tree/rust"

[dependencies]
glib = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
cairo-rs = "^0"
inotify = "*"
dyon = "0.8.*"
range = "0.3.*"
