[package]
name = "madparts"
version = "0.1.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/andete/madparts/tree/rust"

[dependencies.gtk]
version = "0.3"
features = ["v3_10"]

[dependencies]
glib = "0.4"
gdk = "0.7"
gdk-pixbuf = "0.3"
cairo-rs = "0.3"
inotify = "0.5"
range = "0.3"
cpython = "0.1"
#cpython = { git = "https://github.com/dgrunwald/rust-cpython.git" }
env_logger = "0.5"
log = "0.4"
clap = "2.29"

